# iomete-postgresql-sync

./: .dockerignore  .gitignore  Makefile  application.conf  driver.py  readme.md  setup.cfg
docker/: Dockerfile
iomete_postgresql_sync/: main.py
iomete_postgresql_sync/connection/: source.py
iomete_postgresql_sync/sync/: _migrator.py  config.py  iomete_logger.py
iomete_postgresql_sync/test/: _spark_session.py  integration_test.py
